--- a/App2/LeftMenu.xaml
+++ b/App2/LeftMenu.xaml
@@ -224,13 +224,7 @@
 
                         </AppBarButton.Icon>
                     </AppBarButton>
-                    <ListView x:Name="L_medicalBook" DataContext="{Binding}" Margin="10,257,10,73" d:LayoutOverrides="LeftMargin, RightMargin, LeftPosition, RightPosition, TopPosition, BottomPosition" IsItemClickEnabled="True" ItemClick="modif_elem_med_book">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <TextBox x:Name="Fvalue"  TextWrapping="Wrap" Text="{Binding value}" VerticalAlignment="Top" Height="34" HorizontalAlignment="Right"/>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
+                    <ListView x:Name="L_medicalBook" DataContext="{Binding}" Margin="10,257,10,73" d:LayoutOverrides="LeftMargin, RightMargin, LeftPosition, RightPosition, TopPosition, BottomPosition" IsItemClickEnabled="True" ItemClick="modif_elem_med_book"/>
                     <TextBlock x:Name="textBlock7" Margin="64,40,63,0" TextWrapping="Wrap" Text="Carnet médical" VerticalAlignment="Top" d:LayoutOverrides="LeftPosition, RightPosition" FontSize="18.667" HorizontalAlignment="Center"/>
                     <TextBox x:Name="Tsize" Margin="120,85,114,0" TextWrapping="Wrap" Text="" d:LayoutOverrides="LeftPosition, RightPosition"/>
                     <TextBox x:Name="Tweight" Margin="120,157,114,0" TextWrapping="Wrap" Text="" d:LayoutOverrides="LeftPosition, RightPosition"/>
