--- a/App2/LeftMenu.xaml
+++ b/App2/LeftMenu.xaml
@@ -224,7 +224,7 @@
 
                         </AppBarButton.Icon>
                     </AppBarButton>
-                    <ListBox x:Name="L_medicalBook" ItemsSource="{Binding elem}" Margin="10,211,10,148" d:LayoutOverrides="LeftMargin, RightMargin, LeftPosition, RightPosition, TopPosition, BottomPosition" DisplayMemberPath="field" Foreground="Black" />
+                    <ListBox x:Name="L_medicalBook" ItemsSource="{Binding elem}" Margin="10,211,10,148" d:LayoutOverrides="LeftMargin, RightMargin, LeftPosition, RightPosition, TopPosition, BottomPosition" DisplayMemberPath="field" Foreground="Black" Background="{x:Null}" />
                     <TextBox x:Name="Tfield" VerticalAlignment="Bottom" Text="{Binding SelectedItem.value, ElementName=L_medicalBook}" Margin="10,0,10,88" d:LayoutOverrides="LeftPosition, RightPosition" />
                     <TextBlock x:Name="textBlock7" Margin="64,40,63,0" TextWrapping="Wrap" Text="Carnet médical" VerticalAlignment="Top" d:LayoutOverrides="LeftPosition, RightPosition" FontSize="18.667" HorizontalAlignment="Center"/>
                     <TextBox x:Name="Tsize" Margin="120,85,114,0" TextWrapping="Wrap" Text="" d:LayoutOverrides="LeftPosition, RightPosition"/>
