--- a/App2/LeftMenu.xaml
+++ b/App2/LeftMenu.xaml
@@ -119,26 +119,57 @@
                         </ListView.ItemTemplate>
                     </ListView>
                 </Grid>
+                <Grid x:Name="AppoitmentList" Visibility="Collapsed">
+                    <ListView x:Name="L_Appointment" Margin="9,90,10,10" d:LayoutOverrides="LeftPosition, RightPosition, TopPosition, BottomPosition" ItemsSource="{Binding}" IsItemClickEnabled="True" ItemClick="L_Appointment_ItemClick">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Height="85" Margin="6" >
+                                    <Grid.ColumnDefinitions>
+                                        <!--<ColumnDefinition Width="Auto"/>-->
+                                        <ColumnDefinition Width="2*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <!--<Border Width="85" Height="85">
+                                        <Image Source="{Binding Image}" Stretch="UniformToFill"/>
+                                    </Border>-->
+                                    <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0" Visibility="Collapsed">
+                                        <TextBlock Text="Rendez-vous disponible de "/>
+                                        <TextBlock Text="{Binding begins}"/>
+                                        <TextBlock Text="à"/>
+                                        <TextBlock Text="{Binding finish}"/>
+                                    </StackPanel>
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Grid>
                 <Grid x:Name="Doctor" Margin="0.083,0,-0.083,0" d:LayoutOverrides="LeftPosition, RightPosition" Visibility="Collapsed">
                     <Image x:Name="Assets_user_png1" HorizontalAlignment="Left" Height="77" Margin="10,10,0,0" Source="Assets/user.png" Stretch="Fill" VerticalAlignment="Top" Width="77"/>
                     <TextBlock x:Name="Fname1" Margin="130,25,133,0" TextWrapping="Wrap" Text="{Binding first_name}" VerticalAlignment="Top" d:LayoutOverrides="LeftPosition, RightPosition" Height="38" FontSize="14.667"/>
                     <TextBlock x:Name="Lname1" Margin="0,25,13,0" TextWrapping="Wrap" Text="{Binding last_name}" VerticalAlignment="Top" Height="38" HorizontalAlignment="Right" Width="112" d:LayoutOverrides="LeftMargin, RightMargin" FontSize="13.333"/>
                     <Rectangle x:Name="ray10" Fill="White" HorizontalAlignment="Left" Height="2" Margin="10,101,0,0" Stroke="White" StrokeThickness="2" VerticalAlignment="Top" Width="359"/>
                     <TextBlock x:Name="fname" HorizontalAlignment="Left" Margin="30,186,0,0" TextWrapping="Wrap" Text="Prénom :" VerticalAlignment="Top" Height="22" Width="117" FontSize="13.333"/>
-                    <TextBlock x:Name="lname" Margin="0,186,30,0" TextWrapping="Wrap" Text="Nom :" VerticalAlignment="Top" Height="22" FontSize="13.333" HorizontalAlignment="Right" Width="117" d:LayoutOverrides="LeftMargin, RightMargin"/>
-                    <TextBlock x:Name="speciality" Margin="131,250,131,0" TextWrapping="Wrap" Text="spe" FontSize="13.333" Height="22" VerticalAlignment="Top" d:LayoutOverrides="LeftPosition, RightPosition" HorizontalAlignment="Center"/>
-                    <TextBlock x:Name="email" Margin="32,0,0,219" TextWrapping="Wrap" Text="email" FontSize="13.333" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Center" Width="117"/>
-                    <TextBlock x:Name="phone" Margin="32,0,0,148" TextWrapping="Wrap" FontSize="13.333" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="117">
-                		<Run Text="phone"/>
-                		<LineBreak/>
-                		<Run/>
+                    <TextBlock x:Name="lname" Margin="30,144,0,0" TextWrapping="Wrap" Text="Nom :" VerticalAlignment="Top" Height="22" FontSize="13.333" HorizontalAlignment="Left" Width="117"/>
+                    <TextBlock x:Name="speciality" Margin="30,226,0,0" TextWrapping="Wrap" FontSize="13.333" Height="22" VerticalAlignment="Top" HorizontalAlignment="Left" Width="84">
+                    	<Run Text="Spécialité"/>
+                    	<Run Text=" :"/>
                     </TextBlock>
-                    <Button x:Name="BTN_rdv" Content="Prendre rendez-vous" HorizontalAlignment="Stretch" Margin="90,0,90,30" VerticalAlignment="Bottom" Click="BTN_save_user_Click" d:LayoutOverrides="LeftPosition, RightPosition"/>
-                    <TextBlock x:Name="city" Margin="0,0,30,148" TextWrapping="Wrap" FontSize="13.333" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="117">
-                		<Run Text="ville"/>
-                		<LineBreak/>
-                		<Run/>
+                    <TextBlock x:Name="email" Margin="32,0,0,192" TextWrapping="Wrap" FontSize="13.333" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="117" d:LayoutOverrides="LeftMargin, RightMargin">
+                    	<Run Text="email"/>
+                    	<Run Text=" :"/>
                     </TextBlock>
+                    <TextBlock x:Name="phone" Margin="32,0,0,237" TextWrapping="Wrap" FontSize="13.333" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="117" Text="Téléphone :"/>
+                    <Button x:Name="BTN_rdv" Content="Prendre rendez-vous" HorizontalAlignment="Stretch" Margin="90,0,90,70" VerticalAlignment="Bottom" Click="BTN_take_appointment_Click" d:LayoutOverrides="LeftMargin, RightMargin, LeftPosition, RightPosition"/>
+                    <TextBlock x:Name="city" Margin="32,270,0,278" TextWrapping="Wrap" FontSize="13.333" HorizontalAlignment="Left" Width="117" d:LayoutOverrides="TopPosition, BottomPosition">
+                    	<Run Text="Ville :"/>
+                    	<LineBreak/>
+                    	<Run/>
+                    </TextBlock>
+                    <TextBlock x:Name="TDocNom" Text="{Binding last_name}" Height="24" Margin="130,144,36,0" TextWrapping="Wrap" VerticalAlignment="Top" d:LayoutOverrides="LeftPosition, RightPosition"/>
+                    <TextBlock x:Name="TDocPrenom" Text="{Binding speciality}" Height="24" Margin="131,226,36,0" TextWrapping="Wrap" VerticalAlignment="Top" d:LayoutOverrides="LeftPosition, RightPosition"/>
+                    <TextBlock x:Name="TDocSpe" Text="{Binding first_name}" Height="24" Margin="130,186,36,0" TextWrapping="Wrap" VerticalAlignment="Top" d:LayoutOverrides="LeftPosition, RightPosition"/>
+                    <TextBlock x:Name="TDocVille" Text="{Binding city}" Margin="131,268,36,278" TextWrapping="Wrap" d:LayoutOverrides="LeftPosition, RightPosition, TopPosition, BottomPosition"/>
+                    <TextBlock x:Name="TDocPhone" Text="{Binding phone_number}" Height="24" Margin="130,0,36,237" TextWrapping="Wrap" VerticalAlignment="Bottom" d:LayoutOverrides="LeftPosition, RightPosition"/>
+                    <TextBlock x:Name="TDocMail" Text="{Binding email}" Height="24" Margin="131,0,36,192" TextWrapping="Wrap" VerticalAlignment="Bottom" d:LayoutOverrides="LeftPosition, RightPosition"/>
                 </Grid>
                 <Grid x:Name="Contacts" Visibility="Collapsed">
                     <AppBarButton x:Name="BTN_addContact" Label="" Margin="0,10,1,0" HorizontalAlignment="Right" VerticalAlignment="Top" Click="BTN_addContact_Click">
@@ -208,8 +239,8 @@
                     <TextBlock x:Name="textBlock1_Copy2" Margin="32,0,0,179" TextWrapping="Wrap" Text="Email :" FontSize="13.333" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="117"/>
                     <TextBox x:Name="TB_addr" Margin="32,0,29,68" TextWrapping="Wrap" VerticalAlignment="Bottom" Height="34" d:LayoutOverrides="LeftMargin, RightMargin, LeftPosition, RightPosition" Text="{Binding address}"/>
                     <TextBlock x:Name="textBlock1_Copy3" Margin="32,0,0,108" TextWrapping="Wrap" FontSize="13.333" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="117">
-                    	<Run Text="Ad"/>
-                    	<Run Text="resse :"/>
+                		<Run Text="Ad"/>
+                		<Run Text="resse :"/>
                     </TextBlock>
                     <Button x:Name="BTN_save" Content="Sauvegarder" HorizontalAlignment="Left" Margin="30,0,0,1" VerticalAlignment="Bottom" Click="BTN_save_user_Click"/>
                     <Button x:Name="BTN_deleteacc" Content="Supprimer" HorizontalAlignment="Right" Margin="0,0,29,1" VerticalAlignment="Bottom" Click="BTN_delete_account_Click"/>
