--- a/App2/LeftMenu.xaml
+++ b/App2/LeftMenu.xaml
@@ -47,7 +47,11 @@
                         <ColumnDefinition Width="71*"/>
                     </Grid.ColumnDefinitions>
                     <Image x:Name="IMG_forum" HorizontalAlignment="Left" Height="59" VerticalAlignment="Top" Width="94" Source="Assets/forum.png" Margin="15,0,0,0"/>
-                    <TextBlock HorizontalAlignment="Left" Margin="94,10,0,0" TextWrapping="Wrap" Text="Forum" VerticalAlignment="Top" Height="39" Width="217" TextAlignment="Center" FontSize="18" Grid.ColumnSpan="2" Tapped="GR_forum_Tapped"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="94,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="39" Width="217" TextAlignment="Center" FontSize="18" Grid.ColumnSpan="2" Tapped="GR_forum_Tapped">
+                    	<Run Text="Favoris"/>
+                    	<LineBreak/>
+                    	<Run/>
+                    </TextBlock>
                 </Grid>
                 <Rectangle x:Name="ray3" Fill="White" HorizontalAlignment="Left" Height="2" Margin="10,509,0,0" Stroke="White" StrokeThickness="2" VerticalAlignment="Top" Width="321"/>
                 <TextBlock HorizontalAlignment="Left" Margin="44,538,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="40" Width="260" TextAlignment="Center">
@@ -153,13 +157,13 @@
                     	<Run Text="Spécialité"/>
                     	<Run Text=" :"/>
                     </TextBlock>
-                    <TextBlock x:Name="email" Margin="32,0,0,192" TextWrapping="Wrap" FontSize="13.333" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="117" d:LayoutOverrides="LeftMargin, RightMargin">
+                    <TextBlock x:Name="email" Margin="32,0,0,206" TextWrapping="Wrap" FontSize="13.333" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="117" d:LayoutOverrides="LeftMargin, RightMargin">
                     	<Run Text="email"/>
                     	<Run Text=" :"/>
                     </TextBlock>
-                    <TextBlock x:Name="phone" Margin="32,0,0,237" TextWrapping="Wrap" FontSize="13.333" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="117" Text="Téléphone :"/>
-                    <Button x:Name="BTN_rdv" Content="Prendre rendez-vous" HorizontalAlignment="Stretch" Margin="90,0,90,70" VerticalAlignment="Bottom" Click="BTN_take_appointment_Click" d:LayoutOverrides="LeftMargin, RightMargin, LeftPosition, RightPosition"/>
-                    <TextBlock x:Name="city" Margin="32,270,0,278" TextWrapping="Wrap" FontSize="13.333" HorizontalAlignment="Left" Width="117" d:LayoutOverrides="TopPosition, BottomPosition">
+                    <TextBlock x:Name="phone" Margin="32,0,0,241" TextWrapping="Wrap" FontSize="13.333" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="117" Text="Téléphone :"/>
+                    <Button x:Name="BTN_rdv" Content="Prendre rendez-vous" HorizontalAlignment="Stretch" Margin="90,0,90,93" VerticalAlignment="Bottom" Click="BTN_take_appointment_Click" d:LayoutOverrides="LeftMargin, RightMargin, LeftPosition, RightPosition"/>
+                    <TextBlock x:Name="city" Margin="32,266,0,282" TextWrapping="Wrap" FontSize="13.333" HorizontalAlignment="Left" Width="117" d:LayoutOverrides="TopPosition, BottomPosition">
                     	<Run Text="Ville :"/>
                     	<LineBreak/>
                     	<Run/>
@@ -167,9 +171,16 @@
                     <TextBlock x:Name="TDocNom" Text="{Binding last_name}" Height="24" Margin="130,144,36,0" TextWrapping="Wrap" VerticalAlignment="Top" d:LayoutOverrides="LeftPosition, RightPosition"/>
                     <TextBlock x:Name="TDocPrenom" Text="{Binding speciality}" Height="24" Margin="131,226,36,0" TextWrapping="Wrap" VerticalAlignment="Top" d:LayoutOverrides="LeftPosition, RightPosition"/>
                     <TextBlock x:Name="TDocSpe" Text="{Binding first_name}" Height="24" Margin="130,186,36,0" TextWrapping="Wrap" VerticalAlignment="Top" d:LayoutOverrides="LeftPosition, RightPosition"/>
-                    <TextBlock x:Name="TDocVille" Text="{Binding city}" Margin="131,268,36,278" TextWrapping="Wrap" d:LayoutOverrides="LeftPosition, RightPosition, TopPosition, BottomPosition"/>
-                    <TextBlock x:Name="TDocPhone" Text="{Binding phone_number}" Height="24" Margin="130,0,36,237" TextWrapping="Wrap" VerticalAlignment="Bottom" d:LayoutOverrides="LeftPosition, RightPosition"/>
-                    <TextBlock x:Name="TDocMail" Text="{Binding email}" Height="24" Margin="131,0,36,192" TextWrapping="Wrap" VerticalAlignment="Bottom" d:LayoutOverrides="LeftPosition, RightPosition"/>
+                    <TextBlock x:Name="TDocVille" Text="{Binding city}" Margin="131,263,35,283" TextWrapping="Wrap" d:LayoutOverrides="LeftMargin, RightMargin, LeftPosition, RightPosition, TopPosition, BottomPosition"/>
+                    <TextBlock x:Name="TDocPhone" Text="{Binding phone_number}" Height="24" Margin="130,0,35,241" TextWrapping="Wrap" VerticalAlignment="Bottom" d:LayoutOverrides="LeftMargin, RightMargin, LeftPosition, RightPosition"/>
+                    <TextBlock x:Name="TDocMail" Text="{Binding email}" Height="24" Margin="131,0,36,206" TextWrapping="Wrap" VerticalAlignment="Bottom" d:LayoutOverrides="LeftMargin, RightMargin, LeftPosition, RightPosition"/>
+                    <TextBlock x:Name="TPrice" Text="{Binding price}" Height="24" Margin="131,0,35,163" TextWrapping="Wrap" VerticalAlignment="Bottom" d:LayoutOverrides="LeftPosition, RightPosition"/>
+                    <Button x:Name="button5" Content="Ajouter aux favoris" Height="27" Margin="90,0,0,34" VerticalAlignment="Bottom" Width="199" RenderTransformOrigin="0.5,0.509" Click="button5_Click"/>
+                    <TextBlock x:Name="textBlock11" HorizontalAlignment="Left" Height="23" Margin="32,0,0,164" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="55">
+                    	<Run Text="prix :"/>
+                    	<LineBreak/>
+                    	<Run/>
+                    </TextBlock>
                 </Grid>
                 <Grid x:Name="Contacts" Visibility="Collapsed">
                     <AppBarButton x:Name="BTN_addContact" Label="" Margin="0,10,1,0" HorizontalAlignment="Right" VerticalAlignment="Top" Click="BTN_addContact_Click">
@@ -220,7 +231,33 @@
                         </AppBarButton.Icon>
                     </AppBarButton>
                 </Grid>
-                <Grid x:Name="Forum" Visibility="Collapsed"/>
+                <Grid x:Name="Forum" Visibility="Collapsed">
+                    <Grid x:Name="FavorisList">
+                        <ListView x:Name="F_Search" Margin="9,90,10,10" d:LayoutOverrides="LeftPosition, RightPosition, TopPosition, BottomPosition" ItemsSource="{Binding}" IsItemClickEnabled="True" ItemClick="L_Search_ItemClick">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid Height="85" Margin="6" >
+                                        <Grid.ColumnDefinitions>
+                                            <!--<ColumnDefinition Width="Auto"/>-->
+                                            <ColumnDefinition Width="2*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <!--<Border Width="85" Height="85">
+                                        <Image Source="{Binding Image}" Stretch="UniformToFill"/>
+                                    </Border>-->
+                                        <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0">
+                                            <TextBlock Text="{Binding first_name}"/>
+                                            <TextBlock Text="{Binding last_name}"/>
+                                            <TextBlock Text="{Binding speciality}"/>
+                                            <TextBlock Text="{Binding email}"/>
+                                            <TextBlock Text="{Binding phone_number}"/>
+                                            <TextBlock Text="{Binding city}"/>
+                                        </StackPanel>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </Grid>
+                </Grid>
                 <Grid x:Name="User" Visibility="Collapsed">
                     <Image x:Name="Assets_user_png" HorizontalAlignment="Left" Height="77" Margin="10,10,0,0" Source="Assets/user.png" Stretch="Fill" VerticalAlignment="Top" Width="77"/>
                     <TextBlock x:Name="Fname" Margin="163,35,98,0" TextWrapping="Wrap" Text="Mon Profil" VerticalAlignment="Top" d:LayoutOverrides="LeftPosition, RightPosition" Height="38" FontSize="14.667"/>
@@ -277,7 +314,7 @@
                     <TextBox x:Name="textBox4" TextWrapping="Wrap" Text="Nom de l'antécédant" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="25,73,0,0" Height="29" Width="332"/>
                     <TextBox x:Name="textBox5" HorizontalAlignment="Left" Margin="25,112,0,0" TextWrapping="Wrap" Text="Détails de l'antécédant" VerticalAlignment="Top" Width="332" Height="162"/>
                 </Grid>
-                <Grid x:Name="ConfirmAppointment" Margin="10">
+                <Grid x:Name="ConfirmAppointment" Margin="10" Visibility="Collapsed">
                     <TextBlock x:Name="DocFirstName" HorizontalAlignment="Left" Height="40" Margin="36,109,0,0" TextWrapping="Wrap" Text="{Binding first_name}" VerticalAlignment="Top" Width="126"/>
                     <TextBlock x:Name="DocLastName" Height="40" Margin="0,109,42,0" TextWrapping="Wrap" Text="{Binding last_name}" VerticalAlignment="Top" HorizontalAlignment="Right" Width="127"/>
                     <TextBlock x:Name="textAlkacon" Text="Voulez vous vraiment prendre ce rendez-vous avec" Height="28" Margin="36,57,65,0" TextWrapping="Wrap" VerticalAlignment="Top" d:LayoutOverrides="LeftPosition, RightPosition"/>
